ingress/nginx/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: my-ripsaw
spec: {}
status: {}
