ingress/nginx/30-nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: my-ripsaw
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx-ssl-edge
  namespace: my-ripsaw
spec:
  port:
    targetPort: 8080-8080
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx-ssl-passthrough
  namespace: my-ripsaw
spec:
  port:
    targetPort: 8443-8443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: nginx-ssl
    weight: 100
  wildcardPolicy: None
